@@ -1,7 +1,7 @@
 #!/bin/sh
 # morse.test - test functionality of morse.
 #
-# Copyright (c) 1999 Joseph Samuel Myers.
+# Copyright (c) 1999, 2004 Joseph Samuel Myers.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -33,20 +33,37 @@ set -e
 
 testexec morse morse/morse
 
-# morse is somewhat broken and should probably be replaced with the
-# OpenBSD version.  This limits the tests we can do until we fix it.
-
 testno 1
 morse/morse foo >test.out 2>&1 || failtest
 compare test.out tests/morse.foo
 rm -f test.out
 
 testno 2
+echo foo |morse/morse >test.out 2>&1 || failtest
+compare test.out tests/morse.foo
+rm -f test.out
+
+testno 3
 morse/morse -s SOS >test.out 2>&1 || failtest
 compare test.out tests/morse.SOS
 rm -f test.out
 
-testno 3
+testno 4
+echo SOS |morse/morse -s >test.out 2>&1 || failtest
+compare test.out tests/morse.SOS
+rm -f test.out
+
+testno 5
 morse/morse -d <tests/morse.SOS >test.out 2>&1 || failtest
 compare test.out tests/morse.sos
+rm -f test.out
+
+testno 6
+echo "This is a test." |morse/morse -s >test.out 2>&1 || failtest
+compare test.out tests/morse.testsent
+rm -f test.out
+
+testno 7
+morse/morse -d <tests/morse.testsent >test.out 2>&1 || failtest
+compare test.out tests/morse.testsentd
 rm -f test.out
