@@ -1,0 +1,17 @@
+ -
+ ....
+ ..
+ ...
+ 
+ ..
+ ...
+ 
+ .-
+ 
+ -
+ .
+ ...
+ -
+ .-.-.-
+ 
+ ...-.-
